module.jai

//
// This file was auto-generated using the following command:
//
// jai ./generate.jai
//



MG_VERSION :: "7.6";

MG_ARCH_CUSTOM :: 0;
MG_ARCH_UNIX :: 1;
MG_ARCH_WIN32 :: 2;
MG_ARCH_ESP32 :: 3;
MG_ARCH_ESP8266 :: 4;
MG_ARCH_FREERTOS_TCP :: 5;
MG_ARCH_FREERTOS_LWIP :: 6;
MG_ARCH_AZURERTOS :: 7;
MG_ARCH_RTX_LWIP :: 8;

MG_ARCH :: MG_ARCH_WIN32;

MG_ENABLE_DIRLIST :: 1;

MG_ENABLE_FATFS :: 0;

MG_FATFS_ROOT :: "/";

MG_FATFS_BSIZE :: 64;

MG_ENABLE_SOCKET :: 1;

MG_ENABLE_MBEDTLS :: 0;

MG_ENABLE_OPENSSL :: 0;

MG_ENABLE_CUSTOM_TLS :: 0;

MG_ENABLE_SSI :: 1;

MG_ENABLE_IPV6 :: 0;

MG_ENABLE_LOG :: 1;

MG_ENABLE_MD5 :: 0;

MG_ENABLE_WINSOCK :: 1;

MG_ENABLE_CUSTOM_RANDOM :: 0;

MG_ENABLE_PACKED_FS :: 0;

MG_IO_SIZE :: 2048;

MG_MAX_RECV_BUF_SIZE :: 3 * 1024 * 1024;

MG_MAX_HTTP_HEADERS :: 40;

MG_HTTP_INDEX :: "index.html";

MG_SOCK_LISTEN_BACKLOG_SIZE :: 128;

MG_ENABLE_FILE :: 1;

MG_TIMER_REPEAT :: 1;
MG_TIMER_RUN_NOW :: 2;

WEBSOCKET_OP_CONTINUE :: 0;
WEBSOCKET_OP_TEXT :: 1;
WEBSOCKET_OP_BINARY :: 2;
WEBSOCKET_OP_CLOSE :: 8;
WEBSOCKET_OP_PING :: 9;
WEBSOCKET_OP_PONG :: 10;

MQTT_CMD_CONNECT :: 1;
MQTT_CMD_CONNACK :: 2;
MQTT_CMD_PUBLISH :: 3;
MQTT_CMD_PUBACK :: 4;
MQTT_CMD_PUBREC :: 5;
MQTT_CMD_PUBREL :: 6;
MQTT_CMD_PUBCOMP :: 7;
MQTT_CMD_SUBSCRIBE :: 8;
MQTT_CMD_SUBACK :: 9;
MQTT_CMD_UNSUBSCRIBE :: 10;
MQTT_CMD_UNSUBACK :: 11;
MQTT_CMD_PINGREQ :: 12;
MQTT_CMD_PINGRESP :: 13;
MQTT_CMD_DISCONNECT :: 14;

MQTT_CLEAN_SESSION :: 0x02;
MQTT_HAS_WILL :: 0x04;
MQTT_WILL_RETAIN :: 0x20;
MQTT_HAS_PASSWORD :: 0x40;
MQTT_HAS_USER_NAME :: 0x80;

SNTP_INTERVAL_SEC :: 3600;
SNTP_TIME_OFFSET :: 2208988800;

MSG_NONBLOCKING :: 0;

MG_MAX_SSI_DEPTH :: 5;

mg_str :: struct {
    ptr: *u8; // Pointer to string data
    len: size_t; // String len
}

mg_str_s :: (s: *u8) -> mg_str #foreign mongoose;

mg_str_n :: (s: *u8, n: size_t) -> mg_str #foreign mongoose;

mg_lower :: (s: *u8) -> s32 #foreign mongoose;

mg_ncasecmp :: (s1: *u8, s2: *u8, len: size_t) -> s32 #foreign mongoose;

mg_casecmp :: (s1: *u8, s2: *u8) -> s32 #foreign mongoose;

mg_vcmp :: (s1: *mg_str, s2: *u8) -> s32 #foreign mongoose;

mg_vcasecmp :: (str1: *mg_str, str2: *u8) -> s32 #foreign mongoose;

mg_strcmp :: (str1: mg_str, str2: mg_str) -> s32 #foreign mongoose;

mg_strstrip :: (s: mg_str) -> mg_str #foreign mongoose;

mg_strdup :: (s: mg_str) -> mg_str #foreign mongoose;

mg_strstr :: (haystack: mg_str, needle: mg_str) -> *u8 #foreign mongoose;

mg_match :: (str: mg_str, pattern: mg_str, caps: *mg_str) -> bool #foreign mongoose;

mg_globmatch :: (pattern: *u8, plen: size_t, s: *u8, n: size_t) -> bool #foreign mongoose;

mg_commalist :: (s: *mg_str, k: *mg_str, v: *mg_str) -> bool #foreign mongoose;

mg_snprintf_CFormat :: (unknown0: *u8, unknown1: size_t, fmt: *u8, __args: ..Any) -> size_t #foreign mongoose "mg_snprintf";
mg_snprintf :: (unknown0: *u8, unknown1: size_t, fmt: string, __args: ..Any) -> size_t {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_snprintf_CFormat(unknown0, unknown1, "%s", formatted_text.data);
} @PrintLike

mg_hexdump :: (buf: *void, len: size_t) -> *u8 #foreign mongoose;

mg_hex :: (buf: *void, len: size_t, dst: *u8) -> *u8 #foreign mongoose;

mg_unhex :: (buf: *u8, len: size_t, to: *u8) -> void #foreign mongoose;

mg_unhexn :: (s: *u8, len: size_t) -> u32 #foreign mongoose;

mg_asprintf_CFormat :: (unknown0: **u8, unknown1: size_t, fmt: *u8, __args: ..Any) -> size_t #foreign mongoose "mg_asprintf";
mg_asprintf :: (unknown0: **u8, unknown1: size_t, fmt: string, __args: ..Any) -> size_t {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_asprintf_CFormat(unknown0, unknown1, "%s", formatted_text.data);
} @PrintLike

mg_check_ip_acl :: (acl: mg_str, remote_ip: u32) -> s32 #foreign mongoose;

mg_to64 :: (str: mg_str) -> s64 #foreign mongoose;

mg_lld :: (buf: *u8, val: s64, is_signed: bool, is_hex: bool) -> size_t #foreign mongoose;

MG_LL :: enum s32 {
    NONE    :: 0;
    ERROR   :: 1;
    INFO    :: 2;
    DEBUG   :: 3;
    VERBOSE :: 4;
    MG_LL_NONE    :: NONE;
    MG_LL_ERROR   :: ERROR;
    MG_LL_INFO    :: INFO;
    MG_LL_DEBUG   :: DEBUG;
    MG_LL_VERBOSE :: VERBOSE;
}

mg_log_CFormat :: (fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_log";
mg_log :: (fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_log_CFormat("%s", formatted_text.data);
} @PrintLike

mg_log_prefix :: (ll: s32, file: *u8, line: s32, fname: *u8) -> bool #foreign mongoose;

mg_log_set :: (spec: *u8) -> void #foreign mongoose;

mg_log_set_callback :: (fn: #type (unknown0: *void, unknown1: size_t, unknown2: *void) -> void #c_call, param: *void) -> void #foreign mongoose;

mg_timer :: struct {
    period_ms: s64; // Timer period in milliseconds
    expire:    s64; // Expiration timestamp in milliseconds
    flags:     u32; // Possible flags values below

    fn:        #type (unknown0: *void) -> void #c_call; // Function to call
    arg:       *void; // Function argument
    next:      *mg_timer; // Linkage in g_timers list
}

g_timers: *mg_timer #elsewhere mongoose; // Global list of timers

mg_timer_init :: (unknown0: *mg_timer, unknown1: s64, unknown2: u32, unknown3: #type (unknown0: *void) -> void #c_call, unknown4: *void) -> void #foreign mongoose;

mg_timer_free :: (unknown0: *mg_timer) -> void #foreign mongoose;

mg_timer_poll :: (current_time_ms: s64) -> void #foreign mongoose;

MG_FS :: enum s32 {
    READ  :: 1;
    WRITE :: 2;
    DIR   :: 4;
    MG_FS_READ  :: READ;
    MG_FS_WRITE :: WRITE;
    MG_FS_DIR   :: DIR;
}

// Filesystem API functions
// st() returns MG_FS_* flags and populates file size and modification time
// ls() calls fn() for every directory entry, allowing to list a directory
//
// NOTE: UNIX-style shorthand names for the API functions are deliberately
// chosen to avoid conflicts with some libraries that make macros for e.g.
// stat(), write(), read() calls.
mg_fs :: struct {
    st:  #type (path: *u8, size: *size_t, mtime: *time_t) -> s32 #c_call; // stat file
    ls:  #type (path: *u8, fn: #type (unknown0: *u8, unknown1: *void) -> void #c_call, unknown0: *void) -> void #c_call;
    op:  #type (path: *u8, flags: s32) -> *void #c_call; // Open file
    cl:  #type (fd: *void) -> void #c_call; // Close file
    rd:  #type (fd: *void, buf: *void, len: size_t) -> size_t #c_call; // Read file
    wr:  #type (fd: *void, buf: *void, len: size_t) -> size_t #c_call; // Write file
    sk:  #type (fd: *void, offset: size_t) -> size_t #c_call; // Set file position
    mv:  #type (from: *u8, to: *u8) -> bool #c_call; // Rename file
    rm:  #type (path: *u8) -> bool #c_call; // Delete file
    mkd: #type (path: *u8) -> bool #c_call; // Create directory
}

mg_fs_posix: mg_fs #elsewhere mongoose; // POSIX open/close/read/write/seek
mg_fs_packed: mg_fs #elsewhere mongoose; // Packed FS, see examples/complete

// File descriptor
mg_fd :: struct {
    fd: *void;
    fs: *mg_fs;
}

mg_fs_open :: (fs: *mg_fs, path: *u8, flags: s32) -> *mg_fd #foreign mongoose;

mg_fs_close :: (fd: *mg_fd) -> void #foreign mongoose;

mg_file_read :: (fs: *mg_fs, path: *u8, size: *size_t) -> *u8 #foreign mongoose;

mg_file_write :: (fs: *mg_fs, path: *u8, unknown0: *void, unknown1: size_t) -> bool #foreign mongoose;

mg_file_printf_CFormat :: (fs: *mg_fs, path: *u8, fmt: *u8, __args: ..Any) -> bool #foreign mongoose "mg_file_printf";
mg_file_printf :: (fs: *mg_fs, path: *u8, fmt: string, __args: ..Any) -> bool {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_file_printf_CFormat(fs, path, "%s", formatted_text.data);
} @PrintLike

mg_random :: (buf: *void, len: size_t) -> void #foreign mongoose;

mg_ntohs :: (net: u16) -> u16 #foreign mongoose;

mg_ntohl :: (net: u32) -> u32 #foreign mongoose;

mg_crc32 :: (crc: u32, buf: *u8, len: size_t) -> u32 #foreign mongoose;

mg_millis :: () -> s64 #foreign mongoose;

mg_url_port :: (url: *u8) -> u16 #foreign mongoose;

mg_url_is_ssl :: (url: *u8) -> s32 #foreign mongoose;

mg_url_host :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_user :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_pass :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_uri :: (url: *u8) -> *u8 #foreign mongoose;

mg_iobuf :: struct {
    buf:  *u8; // Pointer to stored data
    size: size_t; // Total size available
    len:  size_t; // Current number of bytes
}

mg_iobuf_init :: (unknown0: *mg_iobuf, unknown1: size_t) -> s32 #foreign mongoose;

mg_iobuf_resize :: (unknown0: *mg_iobuf, unknown1: size_t) -> s32 #foreign mongoose;

mg_iobuf_free :: (unknown0: *mg_iobuf) -> void #foreign mongoose;

mg_iobuf_add :: (unknown0: *mg_iobuf, unknown1: size_t, unknown2: *void, unknown3: size_t, unknown4: size_t) -> size_t #foreign mongoose;

mg_iobuf_del :: (unknown0: *mg_iobuf, ofs: size_t, len: size_t) -> size_t #foreign mongoose;

mg_base64_update :: (p: u8, to: *u8, len: s32) -> s32 #foreign mongoose;

mg_base64_final :: (to: *u8, len: s32) -> s32 #foreign mongoose;

mg_base64_encode :: (p: *u8, n: s32, to: *u8) -> s32 #foreign mongoose;

mg_base64_decode :: (src: *u8, n: s32, dst: *u8) -> s32 #foreign mongoose;

mg_md5_ctx :: struct {
    buf:  [4] u32;
    bits: [2] u32;
    in:   [64] u8;
}

mg_sha1_ctx :: struct {
    state:  [5] u32;
    count:  [2] u32;
    buffer: [64] u8;
}

mg_sha1_init :: (unknown0: *mg_sha1_ctx) -> void #foreign mongoose;

mg_sha1_update :: (unknown0: *mg_sha1_ctx, data: *u8, len: size_t) -> void #foreign mongoose;

mg_sha1_final :: (digest: *[20] u8, unknown0: *mg_sha1_ctx) -> void #foreign mongoose;

mg_event_handler_t :: #type (unknown0: *mg_connection, ev: s32, ev_data: *void, fn_data: *void) -> void #c_call;

mg_call :: (c: *mg_connection, ev: s32, ev_data: *void) -> void #foreign mongoose;

mg_error_CFormat :: (c: *mg_connection, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_error";
mg_error :: (c: *mg_connection, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_error_CFormat(c, "%s", formatted_text.data);
} @PrintLike

MG_EV :: enum s32 {
    ERROR      :: 0;
    OPEN       :: 1;
    POLL       :: 2;
    RESOLVE    :: 3;
    CONNECT    :: 4;
    ACCEPT     :: 5;
    READ       :: 6;
    WRITE      :: 7;
    CLOSE      :: 8;
    HTTP_MSG   :: 9;
    HTTP_CHUNK :: 10;
    WS_OPEN    :: 11;
    WS_MSG     :: 12;
    WS_CTL     :: 13;
    MQTT_CMD   :: 14;
    MQTT_MSG   :: 15;
    MQTT_OPEN  :: 16;
    SNTP_TIME  :: 17;
    USER       :: 18;
